--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          </ul>
         </div>
     </header>
+    <div class="main">
        <div id="information">
             <img src="images/mm.jpg" class="image">
         </div>
@@ -32,6 +33,7 @@
         <audio id="mySong">
             <source src="images/song.mp3" type="audio/mp3"> 
         </audio>
+    </div>
         <script>
             var mySong = document.getElementById("mySong");
             var icon = document.getElementById("icon");
